--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
                         maxime ratione pariatur delectus suscipit, omnis repellendus eligendi cum optio ut quibusdam
                         voluptatum reiciendis maiores eius itaque?
-                    </p> 
+                    </p>
 
                     <div class="cta">
                         <button class="btn btn-primary">Baca Selengkapnya</button>
@@ -249,7 +249,8 @@
                             </div>
 
                             <div class="jawaban">
-                                Iya, semua yang ada disini <strong>GRATIS</strong> tidak dipungut biaya sepeserpun, tapi
+                                Iya, semua yang ada disini <strong>GRATIS</strong> tidak dippribtn-primaryt biaya
+                                sepeserpun, tapi
                                 hanya dapat diakses oleh siswa
                                 jurusan RPL SMKN 2 Purbalingga
                             </div>
