--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="profil.html">Profil</a>
                     <a href="about.html">About</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
