--- a/profil.html
+++ b/profil.html
@@ -34,7 +34,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
                     <li><a href="community.html">Community</a></li>
@@ -42,7 +42,6 @@
             </nav>
 
             <div class="menu">
-                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -52,7 +51,7 @@
 
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
             <li><a href="community.html">Community</a></li>
@@ -70,7 +69,7 @@
 
                 <div class="profil-orang">
 
-                    <a href="" class="icon">
+                    <a href="profil.html" rel="nofollow noopener" title="Ubah Profil" class="icon">
                         <i class="fas fa-pen"></i>
                     </a>
 
@@ -80,37 +79,32 @@
                         <p class="email">georgeikkirama@gmail.com</p>
                         <p class="sekolah">SMKN 2 PUrbalingga</p>
 
-                        <div class="pencapaian">
 
-                            <div class="perPencapaian">
-                                <p><span>2100</span> CodePoin</p>
-                            </div>
-
-                            <p>&nbsp; | &nbsp;</p>
-
-                            <div class="perPencapaian">
-                                <p><span>3</span> CodeBadge</p>
-                            </div>
-
-                        </div>
 
                         <div class="tentangSaya">
+                            <h3>Username</h3>
+                            <div class="username">NhOqh9W</div>
                             <h3>Tentang Saya</h3>
                             <p>Hanya siswa SMKN 2 Purbalingga biasa yang suka ngoding web</p>
                         </div>
 
-                        <a href="" class="btn btn-primary w-100">Logout</a>
+                        <a href="profil.html" class="btn btn-primary w-100">Logout</a>
 
                     </div>
                 </div>
                 <div class="profil-kelas">
-                    <p class="titleCodeBadge">CodeBadge</p>
-
-                    <div class="codeBadgeKosong">
-                        <img src="img/kosong.svg" alt="kosong">
-                        <h1>Kamu belum memiliki CodeBadge</h1>
-                        <p>Dapatkan CodeBadge (Sertifikat) pertama kamu dengan cara menyelesaikan kelas atau webinar</p>
-                    </div>
+                    <h2>Deskripsi Lengkap</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam numquam, suscipit deserunt iste
+                        dolorem placeat tempora enim error nihil rem asperiores repudiandae, odio sit natus minima nemo
+                        cupiditate. Optio neque facilis unde delectus. Culpa atque tenetur velit doloremque, et dicta
+                        possimus blanditiis, dolorem rem eum facere officiis vitae voluptatum commodi esse vel, minus
+                        architecto magni quidem libero asperiores mollitia error? Temporibus inventore praesentium
+                        numquam tenetur, in nihil illum perferendis cupiditate soluta ex quaerat ratione repellendus?
+                        Minus, pariatur. Blanditiis soluta deleniti placeat fugit? Adipisci officiis et voluptas
+                        expedita animi ea alias, possimus dolor libero hic eligendi laboriosam inventore ex optio.
+                        Temporibus.
+                    </p>
                 </div>
 
             </div>
