Update Navbar & footer

--- a/detailEvent.html
+++ b/detailEvent.html
@@ -40,7 +40,6 @@
             </nav>
 
             <div class="menu">
-                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -243,7 +242,9 @@
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="profil.html">Profil</a>
                     <a href="about.html">About</a>
+                    <a href="galeri.html">Galeri</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
@@ -273,19 +274,6 @@
             <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
-
-
-    <!-- <div class="modalContainer">
-        <div class="modal">
-            <div class="modal-title">
-
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer"></div>
-        </div>
-    </div> -->
-
-
 
 </body>
 
