--- a/artikel.html
+++ b/artikel.html
@@ -39,7 +39,6 @@
             </nav>
 
             <div class="menu">
-                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -248,7 +247,9 @@
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="profil.html">Profil</a>
                     <a href="about.html">About</a>
+                    <a href="galeri.html">Galeri</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
