--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
             </nav>
 
             <div class="menu">
-                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -446,6 +445,7 @@
                     <a href="faq.html">FAQ</a>
                     <a href="profil.html">Profil</a>
                     <a href="about.html">About</a>
+                    <a href="galeri.html">Galeri</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
