--- a/perArtikel.html
+++ b/perArtikel.html
@@ -40,7 +40,6 @@
             </nav>
 
             <div class="menu">
-                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -253,7 +252,7 @@
                     <button class="btn btn-primary w-100">Kirim</button>
                 </form>
 
-                <div class="komentar pt-50 pb-50">
+                <div class="komentar pt-100 pb-50">
                     <div class="perKomentar">
                         <div class="profil">
                             <img src="img/people/img1.jpg" alt="img user">
@@ -411,7 +410,9 @@
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="profil.html">Profil</a>
                     <a href="about.html">About</a>
+                    <a href="galeri.html">Galeri</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
