--- a/profil.html
+++ b/profil.html
@@ -166,7 +166,9 @@
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="profil.html">Profil</a>
                     <a href="about.html">About</a>
+                    <a href="galeri.html">Galeri</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
