--- a/about.html
+++ b/about.html
@@ -61,53 +61,19 @@
         <section class="hero pt-15-vh">
             <div class="container">
                 <div class="caption">
-                    <h1>We provide <span>qualified facilities to excel.</span></h1>
-                    <!-- Kami menyediakan fasilitas yang mumpuni untuk berprestasi -->
+                    <h1>Apa sih <span>HMJ MI itu?.</span></h1>
                     <p>
-                        Kami menyediakan berbagai macam fasilitas untuk mendukung organisasi ini berjalan dan
-                        berprestasi ditingkat nasional
+                        HMJ MI merupakan sebuah organisasi untuk jurusan manajemen Informatika yang bertujuan untuk
+                        menghimpun dan mewadahi mahasiswa dalam menyalurkan aspirasi dan mengkoordinasikan kegiatan
+                        mahasiswa serta menjaga nama baik almamater STMIK AKAKOM
+                        Yogyakarta.
                     </p>
-
-                    <div class="cta">
-                        <a href="series.html" class="btn btn-primary">Explore</a>
-                    </div>
                 </div>
                 <div class="img">
-                    <img src="img/3d/Saly-10.svg" alt="img hero">
+                    <img src="img/3d/Saly-22.svg" alt="img hero">
                 </div>
             </div>
         </section>
-
-
-        <section class="pt-50">
-            <div class="container">
-                <div class="title mb-50">
-                    <h1>Galeri Kami</h1>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio quasi eum incidunt, odio alias
-                        placeat magni recusandae aut quidem obcaecati praesentium labore fugit quos laborum doloribus
-                        quibusdam dolor, modi beatae.
-                    </p>
-                </div>
-
-                <div class="galeri">
-                    <img src="img/galeri/calendar-works.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-1.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-2.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-4.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/calendar-works.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-1.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-2.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-4.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
-                </div>
-            </div>
-        </section>
-
-        <!-- kami menyediakan fasilitas yang mumpuni untuk menunjang organisasi -->
 
         <section class="prestasi pt-50 pb-100">
             <div class="container">
@@ -186,7 +152,7 @@
         </section>
 
 
-        <section class="containerAnggota">
+        <section class="containerAnggota pb-100">
             <div class="container">
                 <div class="title">
                     <img src="img/about/ic-team-new.svg" alt="img about">
@@ -197,84 +163,57 @@
                     </p>
                 </div>
 
-                <div class="anggota">
+                <div class="anggota pt-50">
                     <div class="perAnggota">
-                        <img src="img/people/img1.jpg" alt="img orang">
-                        <h2>Ahmad Nurfawaid</h2>
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
+                        <p>Product Designer</p>
+                    </div>
+
+                    <div class="perAnggota">
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
+                        <p>Product Designer</p>
+                    </div>
+
+                    <div class="perAnggota">
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
+                        <p>Product Designer</p>
+                    </div>
+
+                    <div class="perAnggota">
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
+                        <p>Product Designer</p>
+                    </div>
+
+                    <div class="perAnggota">
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
+                        <p>Product Designer</p>
+                    </div>
+
+                    <div class="perAnggota">
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
+                        <p>Product Designer</p>
+                    </div>
+
+                    <div class="perAnggota">
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
+                        <p>Product Designer</p>
+                    </div>
+
+                    <div class="perAnggota">
+                        <img src="img/people/IKKI.jpg" alt="img orang">
+                        <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
                     </div>
                 </div>
             </div>
         </section>
-
-
-        <section class="overflow-x-auto pb-100 pt-50">
-            <table>
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>Nama Ruangan</th>
-                        <th>Taraf</th>
-                        <th>Keterangan</th>
-                    </tr>
-                </thead>
-
-                <tbody>
-
-                    <tr>
-                        <td>1</td>
-                        <td>Lab Web</td>
-                        <td>Internasional</td>
-                        <td>Baik</td>
-                    </tr>
-
-                    <tr>
-                        <td>2</td>
-                        <td>Lab Komputasi Awan</td>
-                        <td>Internasional</td>
-                        <td>Baik</td>
-                    </tr>
-
-                    <tr>
-                        <td>3</td>
-                        <td>Lab Mobile App</td>
-                        <td>Internasional</td>
-                        <td>Baik</td>
-                    </tr>
-
-
-                    <tr>
-                        <td>4</td>
-                        <td>Lab VAR</td>
-                        <td>Nasional</td>
-                        <td>Baik</td>
-                    </tr>
-
-                    <tr>
-                        <td>5</td>
-                        <td>Lab AR</td>
-                        <td>Nasional</td>
-                        <td>Baik</td>
-                    </tr>
-
-                    <tr>
-                        <td>6</td>
-                        <td>Lab CyberSecurity</td>
-                        <td>Nasional</td>
-                        <td>Baik</td>
-                    </tr>
-
-                    <tr>
-                        <td>7</td>
-                        <td>Lab Game</td>
-                        <td>Nasional</td>
-                        <td>Baik</td>
-                    </tr>
-
-                </tbody>
-            </table>
-        </section>
-
 
 
 
