Meresponsivekan halaman About

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             </div>
         </section>
 
-        <section class="prestasi pt-50 pb-100">
+        <section class="prestasi pt-50 pb-50">
             <div class="container">
                 <div class="title">
                     <h1>Prestasi HMJ MI</h1>
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="overflow-x-auto mt-50">
-                    <table>
+                    <table class="mb-20">
                         <thead>
                             <tr>
                                 <th>No</th>
@@ -147,6 +147,14 @@
                             </tr>
                         </tfoot>
                     </table>
+
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="about.html">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="about.html">1</a></li>
+                        <li class="page-item"><a class="page-link" href="about.html">2</a></li>
+                        <li class="page-item"><a class="page-link" href="about.html">3</a></li>
+                        <li class="page-item"><a class="page-link" href="about.html">Next</a></li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -164,53 +172,53 @@
                 </div>
 
                 <div class="anggota pt-50">
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
 
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
 
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
 
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
 
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
 
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
 
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
 
-                    <div class="perAnggota">
+                    <a href="profil.html" class="perAnggota">
                         <img src="img/people/IKKI.jpg" alt="img orang">
                         <h2>Rifki Romadhan</h2>
                         <p>Product Designer</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
