Menambahkan ScrollTrigger.min.js dan update footer

--- a/event.html
+++ b/event.html
@@ -440,13 +440,22 @@
         <section class="footer">
             <div class="container">
                 <div class="box">
-                    <div class="logo">
-                        <h2>About Us</h2>
-                    </div>
+                    <h2>About Us</h2>
+
                     <p>
-                        HMJ MI adalah platform untuk jurusan Managemen Informatika Universitas Teknologi Digital
-                        Indonesia.
+                        <span>
+                            Jl. Raya Janti Karang Jambe No. 143 Yogyakarta 55198
+                        </span>
+
+                        <span>
+                            Telepon : (+62) 896-0236-0904
+                        </span>
+
+                        <span>
+                            Email : hmjmi_akakom@gmail.com
+                        </span>
                     </p>
+
                     <p>
                         HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
                             class="pencipta">Rifki
