--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 
     <script src="js/script.js" defer></script>
     <script src="js/gsap.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
 
     <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
     <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
@@ -79,14 +80,14 @@
         <section class="prestasi pt-50 pb-50">
             <div class="container">
                 <div class="title">
-                    <h1>Prestasi HMJ MI</h1>
-                    <p>
+                    <h1 class="stagger2">Prestasi HMJ MI</h1>
+                    <p class="stagger2">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis sapiente, aut totam repellendus
                         quos recusandae exercitationem tempora voluptas animi voluptates.
                     </p>
                 </div>
 
-                <div class="overflow-x-auto mt-50">
+                <div class="overflow-x-auto mt-50 stagger2">
                     <table class="mb-20">
                         <thead>
                             <tr>
@@ -164,9 +165,9 @@
         <section class="containerAnggota pb-100">
             <div class="container">
                 <div class="title">
-                    <img src="img/about/ic-team-new.svg" alt="img about">
-                    <h1>Orang-Orang Didalam HMJ MI</h1>
-                    <p>
+                    <img src="img/about/ic-team-new.svg" alt="img about" class="stagger2">
+                    <h1 class="stagger2">Orang-Orang Didalam HMJ MI</h1>
+                    <p class="stagger2">
                         Kami disebut ahli karena kami memiliki keterampilan dan pengetahuan bahwa kemungkinan penemuan
                         kreatif tidak terbatas bersama HMJ MI.
                     </p>
@@ -262,13 +263,24 @@
         <section class="footer">
             <div class="container">
                 <div class="box">
-                    <div class="logo">
-                        <h2>About Us</h2>
-                    </div>
+
+                    <h2>About Us</h2>
+
                     <p>
-                        HMJ MI adalah platform untuk jurusan Managemen Informatika Universitas Teknologi Digital
-                        Indonesia.
+                        <span>
+                            Jl. Raya Janti Karang Jambe No. 143 Yogyakarta 55198
+                        </span>
+
+                        <span>
+                            Telepon : (+62) 896-0236-0904
+                        </span>
+
+                        <span>
+                            Email : hmjmi_akakom@gmail.com
+                        </span>
                     </p>
+
+
                     <p>
                         HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
                             class="pencipta">Rifki
@@ -309,6 +321,7 @@
 
     </main>
 
+
     <footer>
         <div class="container">
             <p>Created with <span>&hearts;</span> by TasBee</p>
@@ -316,6 +329,8 @@
     </footer>
 
     <script>
+        gsap.registerPlugin(ScrollTrigger);
+
         gsap.from('.hero', {
             y: "-30%",
             opacity: 0,
@@ -329,6 +344,44 @@
             stagger: .7,
             ease: Power4.easeOut,
         }, "-=2.5")
+
+        gsap.from('.hero .caption .img', {
+            opacity: 0,
+            y: -50,
+            duration: 2,
+            ease: Power4.easeOut,
+        })
+
+        gsap.from('.stagger2', {
+            opacity: 0,
+            y: -20,
+            duration: 2,
+            stagger: .7,
+            ease: Power4.easeOut,
+
+            scrollTrigger: {
+                trigger: ".stagger2",
+                start: "top bottom",
+                marker: true,
+                toggleActions: "restart resume reverse pause"
+            }
+        }, "-=2.5")
+
+
+        gsap.from(".perAnggota", {
+            y: -20,
+            opacity: 0,
+            stagger: .5,
+            //duration: 10,
+            ease: Power4.easeOut,
+
+            scrollTrigger: {
+                trigger: ".perAnggota",
+                start: "top center",
+                marker: true,
+                toggleActions: "restart resume reverse pause"
+            }
+        })
     </script>
 
 
